# omni-engineer

./: .env.example  .gitignore  Project Overview.md  README.md  format_omni_markdown.py  index.html  json_chat_log_reformat.py  main.py  requirements.txt
.devcontainer/: devcontainer.json
ai_assistant/: .editorconfig  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  find-empty-files.py
ai_assistant/backend/: .gitignore  README.md  requirements.txt  setup.cfg
ai_assistant/backend/api/: __init__.py  main.py
ai_assistant/backend/api/middleware/: __init__.py  auth.py  rate_limit.py
ai_assistant/backend/api/models/: __init__.py  ai_models.py  auth_models.py  code_models.py  file_models.py
ai_assistant/backend/api/routes/: __init__.py  ai_routes.py  auth_routes.py  code_routes.py  file_routes.py  git_routes.py  project_routes.py  search_routes.py  websocket_routes.py
ai_assistant/backend/api/services/: __init__.py  ai_service.py  auth_service.py  code_service.py  file_service.py  git_service.py  project_service.py  search_service.py  websocket_service.py
ai_assistant/backend/cli/: __init__.py  main.py
ai_assistant/backend/cli/commands/: __init__.py  ai_commands.py  file_commands.py  git_commands.py  project_commands.py
ai_assistant/backend/core/: __init__.py  ai_integration.py  code_analyzer.py  file_handler.py  git_integration.py  language_support.py  vector_db.py
ai_assistant/backend/tests/: test_api.py  test_cli.py  test_core.py
ai_assistant/backend/utils/: __init__.py  config.py  helpers.py  logger.py
original/: README.md  (+2 more)
(+38 files in other folders)
