# backend/setup.cfg

[metadata]
name = ai_assistant_backend
version = 0.1.0
description = Backend for AI-assisted developer tool
author = Your Name
author_email = your.email@example.com

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi
    uvicorn
    sqlalchemy
    pydantic
    python-jose[cryptography]
    passlib[bcrypt]
    python-multipart
    aiofiles
    python-dotenv
    openai
    gitpython
    chromadb
    sentence-transformers

[options.extras_require]
dev =
    pytest
    pytest-asyncio
    black
    isort
    flake8

[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501, W503
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist,venv

[tool:pytest]
testpaths = tests
asyncio_mode = auto

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True